--- a/lab2/Bannitsyn_Marchwica_projekt_2.ipynb
+++ b/lab2/Bannitsyn_Marchwica_projekt_2.ipynb
@@ -280,7 +280,7 @@
         "  print(\"Macierz pomyłek - dane niewyrównane:\")\n",
         "  print(cm_non_deskewed)\n",
         "  print(\"Macierz pomyłek - dane surowe:\")\n",
-        "  # print(cm_raw_deskewed)\n",
+        "  print(cm_raw_deskewed)\n",
         "  print(\"Macierz pomyłek - dane zmieszane:\")\n",
         "  # print(cm_shuffle)"
       ],
@@ -381,9 +381,7 @@
       "metadata": {
         "id": "KElWBwMug5xI"
       },
-      "source": [
-        ""
-      ]
+      "source": []
     },
     {
       "cell_type": "code",
@@ -1371,9 +1369,7 @@
       "metadata": {
         "id": "5DPd6g0etJi1"
       },
-      "source": [
-        ""
-      ]
+      "source": []
     },
     {
       "cell_type": "code",
@@ -1397,10 +1393,10 @@
         "nn_test_non_deskewed = nn_test_non_deskewed.astype('float32') / 255\n",
         "\n",
         "nn_train_raw_deskewed = np.array(train_deskewed).reshape((60000, 28*28))\n",
-        "nn_train_raw_deskewed = nn_train_non_deskewed.astype('float32') / 255\n",
+        "nn_train_raw_deskewed = nn_train_raw_deskewed.astype('float32') / 255\n",
         "\n",
         "nn_test_raw_deskewed = np.array(test_deskewed).reshape((10000, 28*28))\n",
-        "nn_test_raw_deskewed = nn_test_non_deskewed.astype('float32') / 255"
+        "nn_test_raw_deskewed = nn_test_raw_deskewed.astype('float32') / 255"
       ],
       "execution_count": null,
       "outputs": []
@@ -1730,7 +1726,7 @@
         "outputId": "c5849379-2265-4968-b39b-10d741d38779"
       },
       "source": [
-        "network_deskewed.fit(nn_train_deskewed, encoded_train_labels, epochs=model_raw_deskewed.get('epochs'), batch_size=model_raw_deskewed.get('batch_size'))"
+        "network_raw_deskewed.fit(nn_train_raw_deskewed, encoded_train_labels, epochs=model_raw_deskewed.get('epochs'), batch_size=model_raw_deskewed.get('batch_size'))"
       ],
       "execution_count": null,
       "outputs": [
