Added shuffle data and SVM grid search for shuffle raw data

--- a/lab2/Bannitsyn_Marchwica_projekt_2.ipynb
+++ b/lab2/Bannitsyn_Marchwica_projekt_2.ipynb
@@ -8,12 +8,17 @@
       "collapsed_sections": []
     },
     "kernelspec": {
-      "display_name": "Python 3.8.5 64-bit (conda)",
-      "name": "python385jvsc74a57bd097e84bb5e4a3161ab39da84663701e6c02adafdda12e03d1d966874dc1a30b83"
+      "name": "python3",
+      "display_name": "Python 3.8.6 32-bit",
+      "metadata": {
+        "interpreter": {
+          "hash": "1c3d89c725fc8077115fe0dd0422013479bda4f87832e89cd28dda15c98e6c78"
+        }
+      }
     },
     "language_info": {
       "name": "python",
-      "version": "3.8.5-final"
+      "version": "3.8.6"
     }
   },
   "cells": [
@@ -65,8 +70,20 @@
         "#K.set_session(sess)\n",
         "(train_images, train_labels), (test_images, test_labels) = mnist.load_data()\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "ModuleNotFoundError",
+          "evalue": "No module named 'matplotlib'",
+          "traceback": [
+            "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+            "\u001b[1;32m<ipython-input-1-0d65f17ab415>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mcv2\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mnumpy\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[1;32mimport\u001b[0m \u001b[0mmatplotlib\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpyplot\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mplt\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      4\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mkeras\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdatasets\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mmnist\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0msvm\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+            "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'matplotlib'"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -377,13 +394,6 @@
       "outputs": []
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "KElWBwMug5xI"
-      },
-      "source": []
-    },
-    {
       "cell_type": "code",
       "metadata": {
         "id": "oFF3QEGDhF1v"
@@ -397,6 +407,20 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Zmieszane dane surowe\n",
+        "train_shuffle = train_deskewed.copy()\n",
+        "np.random.shuffle(train_shuffle)\n",
+        "\n",
+        "test_shuffle = test_deskewed.copy()\n",
+        "np.random.shuffle(test_shuffle)"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -420,7 +444,7 @@
         "rawdata_train_deskewed_short = train_deskewed[:600]\n",
         "\n",
         "# Zmieszane dane surowe \n",
-        "# TODO\n",
+        "train_shuffle_short = train_shuffle[:600]\n",
         "\n",
         "train_labels_short = train_labels[:600]"
       ],
@@ -559,7 +583,7 @@
         "id": "pu0t5_tvkuo7"
       },
       "source": [
-        "# TODO"
+        "model_shuffle = SVMGridSearch(train_shuffle_short, train_labels_short)"
       ],
       "execution_count": null,
       "outputs": []
@@ -590,7 +614,8 @@
       "source": [
         "%store model_deskewed\n",
         "%store model_non_deskewed\n",
-        "%store model_raw_deskewed\n"
+        "%store model_raw_deskewed\n",
+        "%store model_shuffle"
       ],
       "execution_count": null,
       "outputs": [
@@ -641,8 +666,7 @@
       "source": [
         "model_deskewed.fit(hogdata_train_deskewed, train_labels)\n",
         "\n",
-        "\n",
-        "pred_labels_deskewed = model_deskewed.predict(hogdata_test_deskewed)\n"
+        "pred_labels_deskewed = model_deskewed.predict(hogdata_test_deskewed)"
       ],
       "execution_count": null,
       "outputs": []
@@ -672,7 +696,6 @@
         "id": "sPZ5YhfDaks4"
       },
       "source": [
-        "\n",
         "idx = np.random.choice(np.arange(len(train_deskewed)), 6000, replace=False)\n",
         "train_deskewed_random = train_deskewed[idx]\n",
         "train_labels_random = train_labels[idx]\n",
@@ -682,6 +705,20 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "idx = np.random.choice(np.arange(len(train_deskewed)), 6000, replace=False)\n",
+        "train_shuffle_random = train_shuffle[idx]\n",
+        "train_labels_random = train_labels[idx]\n",
+        "\n",
+        "model_shuffle.fit(train_shuffle_random,train_labels_random)\n",
+        "pred_labels_shuffle = model_shuffle.predict(test_shuffle)"
+      ]
     },
     {
       "cell_type": "markdown",
