Added pred_labels_shuffle to confMatrix, getReports and getAccuracy functions

--- a/lab2/Bannitsyn_Marchwica_projekt_2.ipynb
+++ b/lab2/Bannitsyn_Marchwica_projekt_2.ipynb
@@ -285,11 +285,11 @@
         "id": "TZ6PX-EpwnSr"
       },
       "source": [
-        "def getConfMatrix(test_labels, pred_labels_deskewed, pred_labels_non_deskewed,pred_labels_raw_deskewed):\n",
+        "def getConfMatrix(test_labels, pred_labels_deskewed, pred_labels_non_deskewed,pred_labels_raw_deskewed,pred_labels_shuffle):\n",
         "  cm_deskewed = confusion_matrix(test_labels, pred_labels_deskewed)\n",
         "  cm_non_deskewed = confusion_matrix(test_labels, pred_labels_non_deskewed)\n",
         "  cm_raw_deskewed = confusion_matrix(test_labels, pred_labels_raw_deskewed)\n",
-        "  # cm_shuffle = \n",
+        "  cm_shuffle = confusion_matrix(test_labels, pred_labels_shuffle)\n",
         "\n",
         "\n",
         "  print(\"Macierz pomyłek - dane wyrównane:\")\n",
@@ -299,7 +299,7 @@
         "  print(\"Macierz pomyłek - dane surowe:\")\n",
         "  print(cm_raw_deskewed)\n",
         "  print(\"Macierz pomyłek - dane zmieszane:\")\n",
-        "  # print(cm_shuffle)"
+        "  print(cm_shuffle)"
       ],
       "execution_count": null,
       "outputs": []
@@ -310,7 +310,7 @@
         "id": "FhSNwocqyMYJ"
       },
       "source": [
-        "def getReports(test_labels, pred_labels_deskewed, pred_labels_non_deskewed,pred_labels_raw_deskewed):\n",
+        "def getReports(test_labels, pred_labels_deskewed, pred_labels_non_deskewed,pred_labels_raw_deskewed,pred_labels_shuffle):\n",
         "  print(\"Raport - dane wyrównane:\")\n",
         "  print(classification_report(test_labels, pred_labels_deskewed))\n",
         "  print(\"Raport - dane niewyrównane:\")\n",
@@ -318,7 +318,7 @@
         "  print(\"Raport - dane surowe:\")\n",
         "  print(classification_report(test_labels, pred_labels_raw_deskewed))\n",
         "  print(\"Raport - dane zmieszane:\")\n",
-        "  # print()"
+        "  print(classification_report(test_labels, pred_labels_shuffle))"
       ],
       "execution_count": null,
       "outputs": []
@@ -329,11 +329,11 @@
         "id": "rUXlzWXlylZv"
       },
       "source": [
-        "def getAccuracy(test_labels, pred_labels_deskewed, pred_labels_non_deskewed,pred_labels_raw_deskewed):\n",
+        "def getAccuracy(test_labels, pred_labels_deskewed, pred_labels_non_deskewed,pred_labels_raw_deskewed,pred_labels_shuffle):\n",
         "  print(\"Accuracy - dane wyrównane: \" + str(accuracy_score(test_labels, pred_labels_deskewed)))\n",
         "  print(\"Accuracy - dane niewyrównane: \" + str(accuracy_score(test_labels, pred_labels_non_deskewed)))\n",
         "  print(\"Accuracy - dane surowe: \" + str(accuracy_score(test_labels, pred_labels_raw_deskewed)))\n",
-        "  print(\"Accuracy - dane zmieszane: \")"
+        "  print(\"Accuracy - dane zmieszane: \" + str(accuracy_score(test_labels, pred_labels_shuffle)))"
       ],
       "execution_count": null,
       "outputs": []
@@ -641,7 +641,8 @@
       "source": [
         "%store -r model_deskewed\n",
         "%store -r model_non_deskewed\n",
-        "%store -r model_raw_deskewed"
+        "%store -r model_raw_deskewed\n",
+        "%store -r model_shuffle"
       ],
       "execution_count": null,
       "outputs": []
@@ -712,7 +713,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "idx = np.random.choice(np.arange(len(train_deskewed)), 6000, replace=False)\n",
+        "idx = np.random.choice(np.arange(len(train_shuffle)), 6000, replace=False)\n",
         "train_shuffle_random = train_shuffle[idx]\n",
         "train_labels_random = train_labels[idx]\n",
         "\n",
@@ -739,7 +740,7 @@
         "outputId": "d18111b2-2a4d-4826-8f11-f8e7b61d0946"
       },
       "source": [
-        "getAccuracy(test_labels, pred_labels_deskewed,pred_labels_non_deskewed,pred_labels_raw_deskewed)"
+        "getAccuracy(test_labels, pred_labels_deskewed,pred_labels_non_deskewed,pred_labels_raw_deskewed,pred_labels_shuffle)"
       ],
       "execution_count": null,
       "outputs": [
@@ -774,7 +775,7 @@
         "outputId": "a03e5a11-2ed1-4e7d-960e-2c188061eb2d"
       },
       "source": [
-        "getConfMatrix(test_labels, pred_labels_deskewed,pred_labels_non_deskewed,pred_labels_raw_deskewed)"
+        "getConfMatrix(test_labels, pred_labels_deskewed,pred_labels_non_deskewed,pred_labels_raw_deskewed,pred_labels_shuffle)"
       ],
       "execution_count": null,
       "outputs": [
@@ -829,7 +830,7 @@
         "outputId": "da81a8ce-fcfd-45ad-f0fa-93da3d34cb34"
       },
       "source": [
-        "getReports(test_labels, pred_labels_deskewed,pred_labels_non_deskewed,pred_labels_raw_deskewed)"
+        "getReports(test_labels, pred_labels_deskewed,pred_labels_non_deskewed,pred_labels_raw_deskewed,pred_labels_shuffle)"
       ],
       "execution_count": null,
       "outputs": [
