--- a/lab2/Bannitsyn_Marchwica_projekt_2.ipynb
+++ b/lab2/Bannitsyn_Marchwica_projekt_2.ipynb
@@ -1120,7 +1120,7 @@
         "id": "gOBh-N64p2q2"
       },
       "source": [
-        "# TODO"
+        "model_shuffle = RandomForestGridSearch(train_shuffle_short, train_labels_short)"
       ],
       "execution_count": null,
       "outputs": []
@@ -1155,10 +1155,12 @@
         "model_deskewed.fit(hogdata_train_deskewed, train_labels)\n",
         "model_non_deskewed.fit(hogdata_train, train_labels)\n",
         "model_raw_deskewed.fit(train_deskewed, train_labels)\n",
+        "model_shuffle.fit(train_shuffle, train_labels)\n",
         "\n",
         "pred_labels_deskewed = model_deskewed.predict(hogdata_test_deskewed)\n",
         "pred_labels_non_deskewed = model_non_deskewed.predict(hogdata_test)\n",
-        "pred_labels_raw_deskewed = model_raw_deskewed.predict(test_deskewed)"
+        "pred_labels_raw_deskewed = model_raw_deskewed.predict(test_deskewed)\n",
+        "pred_labels_shuffle = model_shuffle.predict(test_shuffle)"
       ],
       "execution_count": null,
       "outputs": []
@@ -1182,7 +1184,7 @@
         "outputId": "0c6df1c3-91d9-4a36-9c70-0199de13764d"
       },
       "source": [
-        "getAccuracy(test_labels, pred_labels_deskewed,pred_labels_non_deskewed,pred_labels_raw_deskewed)"
+        "getAccuracy(test_labels, pred_labels_deskewed,pred_labels_non_deskewed,pred_labels_raw_deskewed,pred_labels_shuffle)"
       ],
       "execution_count": null,
       "outputs": [
@@ -1217,7 +1219,7 @@
         "outputId": "c44d70c6-7d5d-4a82-8b99-fa71db083678"
       },
       "source": [
-        "getConfMatrix(test_labels, pred_labels_deskewed,pred_labels_non_deskewed,pred_labels_raw_deskewed)"
+        "getConfMatrix(test_labels, pred_labels_deskewed,pred_labels_non_deskewed,pred_labels_raw_deskewed,pred_labels_shuffle)"
       ],
       "execution_count": null,
       "outputs": [
@@ -1272,7 +1274,7 @@
         "outputId": "5d6b19db-0bf0-46aa-b57f-53889dbfcb06"
       },
       "source": [
-        "getReports(test_labels, pred_labels_deskewed,pred_labels_non_deskewed,pred_labels_raw_deskewed)"
+        "getReports(test_labels, pred_labels_deskewed,pred_labels_non_deskewed,pred_labels_raw_deskewed,pred_labels_shuffle)"
       ],
       "execution_count": null,
       "outputs": [
