Added shuffle data to Neural Network grid search

--- a/lab2/Bannitsyn_Marchwica_projekt_2.ipynb
+++ b/lab2/Bannitsyn_Marchwica_projekt_2.ipynb
@@ -1399,7 +1399,7 @@
         "network_deskewed = create_model()\n",
         "network_non_deskewed = create_model()\n",
         "network_raw_deskewed = create_model()\n",
-        "# network_shuffle = create_model()"
+        "network_shuffle = create_model()"
       ],
       "execution_count": null,
       "outputs": []
@@ -1436,7 +1436,13 @@
         "nn_train_raw_deskewed = nn_train_raw_deskewed.astype('float32') / 255\n",
         "\n",
         "nn_test_raw_deskewed = np.array(test_deskewed).reshape((10000, 28*28))\n",
-        "nn_test_raw_deskewed = nn_test_raw_deskewed.astype('float32') / 255"
+        "nn_test_raw_deskewed = nn_test_raw_deskewed.astype('float32') / 255\n",
+        "\n",
+        "nn_train_shuffle = np.array(train_shuffle).reshape((60000, 28*28))\n",
+        "nn_train_shuffle = nn_train_shuffle.astype('float32') / 255\n",
+        "\n",
+        "nn_test_shuffle = np.array(test_shuffle).reshape((10000, 28*28))\n",
+        "nn_test_shuffle = nn_test_shuffle.astype('float32') / 255"
       ],
       "execution_count": null,
       "outputs": []
@@ -1587,7 +1593,7 @@
         "id": "ZcTLpnM5tfdm"
       },
       "source": [
-        "# TODO"
+        "model_shuffle = NeuralNetworkGridSrearch(nn_train_shuffle, encoded_train_labels)"
       ],
       "execution_count": null,
       "outputs": []
@@ -1818,7 +1824,7 @@
         "id": "14NMz82Vuyu7"
       },
       "source": [
-        "# TODO"
+        "network_shuffle.fit(nn_train_shuffle,encoded_train_labels, epochs=model_shuffle.get('epochs'), batch_size=model_shuffle.get('batch_size'))"
       ],
       "execution_count": null,
       "outputs": []
@@ -1834,13 +1840,13 @@
       "source": [
         "pred_probabilities_deskewed = network_deskewed.predict(nn_test_deskewed)\n",
         "pred_probabilities_non_deskewed = network_non_deskewed.predict(nn_test_non_deskewed)\n",
-        "pred_probabilities_raw_deskewed = network_non_deskewed.predict(nn_test_raw_deskewed)\n",
-        "# pred_probabilities_shuffle = \n",
+        "pred_probabilities_raw_deskewed = network_raw_deskewed.predict(nn_test_raw_deskewed)\n",
+        "pred_probabilities_shuffle = network_shuffle.predict(nn_test_shuffle)\n",
         "\n",
         "pred_labels_deskewed = np.argmax(pred_probabilities_deskewed,-1)\n",
         "pred_labels_non_deskewed = np.argmax(pred_probabilities_non_deskewed,-1)\n",
         "pred_labels_raw_deskewed = np.argmax(pred_probabilities_raw_deskewed,-1)\n",
-        "# pred_labels_shuffle = "
+        "pred_labels_shuffle = np.argmax(pred_probabilities_shuffle,-1)"
       ],
       "execution_count": null,
       "outputs": []
@@ -1864,7 +1870,7 @@
         "outputId": "e661b06e-a11e-4fb3-d050-39ea5cf98c85"
       },
       "source": [
-        "getAccuracy(test_labels, pred_labels_deskewed,pred_labels_non_deskewed,pred_labels_raw_deskewed)"
+        "getAccuracy(test_labels, pred_labels_deskewed,pred_labels_non_deskewed,pred_labels_raw_deskewed,pred_labels_shuffle)"
       ],
       "execution_count": null,
       "outputs": [
@@ -1899,7 +1905,7 @@
         "outputId": "a5ac539f-619c-4288-a477-d490488dadaf"
       },
       "source": [
-        "getConfMatrix(test_labels, pred_labels_deskewed,pred_labels_non_deskewed,pred_labels_raw_deskewed)"
+        "getConfMatrix(test_labels, pred_labels_deskewed,pred_labels_non_deskewed,pred_labels_raw_deskewed,pred_labels_shuffle)"
       ],
       "execution_count": null,
       "outputs": [
@@ -1954,7 +1960,7 @@
         "outputId": "639f746c-c3c5-44d5-c3fa-143225acdf11"
       },
       "source": [
-        "getReports(test_labels, pred_labels_deskewed,pred_labels_non_deskewed,pred_labels_raw_deskewed)"
+        "getReports(test_labels, pred_labels_deskewed,pred_labels_non_deskewed,pred_labels_raw_deskewed,pred_labels_shuffle)"
       ],
       "execution_count": null,
       "outputs": [
