Fixed shuffle data

--- a/lab2/Bannitsyn_Marchwica_projekt_2.ipynb
+++ b/lab2/Bannitsyn_Marchwica_projekt_2.ipynb
@@ -415,11 +415,15 @@
       "outputs": [],
       "source": [
         "# Zmieszane dane surowe\n",
-        "train_shuffle = train_deskewed.copy()\n",
-        "np.random.shuffle(train_shuffle)\n",
+        "train_shuffle = train_images.copy()\n",
+        "train_shuffle = np.float32([deskew(im) for im in train_shuffle])\n",
+        "np.float32([np.random.shuffle(im) for im in train_shuffle])\n",
+        "train_shuffle = np.asarray(train_shuffle).reshape(-1,28*28)\n",
         "\n",
-        "test_shuffle = test_deskewed.copy()\n",
-        "np.random.shuffle(test_shuffle)"
+        "test_shuffle = test_images.copy()\n",
+        "test_shuffle = np.float32([deskew(im) for im in test_shuffle])\n",
+        "np.float32([np.random.shuffle(im) for im in test_shuffle])\n",
+        "test_shuffle = np.asarray(test_shuffle).reshape(-1,28*28)"
       ]
     },
     {
