--- a/lab3/Speech Recognition.ipynb
+++ b/lab3/Speech Recognition.ipynb
@@ -341,6 +341,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#restore session variables\n",
+    "%store -r  all_wave \n",
+    "%store -r all_label "
+   ]
+  },
+  {
    "cell_type": "raw",
    "metadata": {},
    "source": [
@@ -921,6 +932,38 @@
    "source": [
     "#converting voice commands to text\n",
     "predict(samples)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Stored 'all_wave' (ndarray)\nStored 'all_label' (list)\n"
+     ]
+    }
+   ],
+   "source": [
+    "#save session variables\n",
+    "\n",
+    "%store  all_wave \n",
+    "%store  all_label \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#restore session variables\n",
+    "%store -r  all_wave \n",
+    "%store -r all_label "
    ]
   },
   {
